--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             transform: translate(-50%, -150%);
             white-space: nowrap;
         }
+.marker:hover {
+    background: yellow;
+    transform: scale(1.2);
+}
 
         #viewer-container {
             position: fixed;
