--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             transform: translate(-50%, -150%);
             white-space: nowrap;
         }
+/* Marker và Label thu nhỏ khi trên iPhone 11 Pro Max khổ dọc */
+@media screen and (max-width: 414px) and (orientation: portrait) {
+    .marker {
+        width: 12px; /* Thu nhỏ marker */
+        height: 12px;
+    }
+
+    .marker-label {
+        font-size: 10px; /* Thu nhỏ kích thước chữ */
+        padding: 2px 5px; /* Thu nhỏ padding */
+    }
+}
 
         @keyframes bounce {
             0%, 100% {
