--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         /* Bản đồ */
         #map-container {
             position: relative;
-            //width: 100%;
             height: 100vh;
             aspect-ratio: 12 / 9;
             background: #f0f0f0;
@@ -76,10 +75,10 @@
 
         @keyframes bounce {
             0%, 100% {
-                transform: translate(-50%, -50%) scale(0.7);
+                transform: translate(-50%, -50%) scale(0.9);
             }
             50% {
-                transform: translate(-50%, -50%) scale(1.1);
+                transform: translate(-50%, -50%) scale(1.5);
             }
         }
 
@@ -123,7 +122,7 @@
 <body>
     <!-- Bản đồ -->
     <div id="map-container">
-        <img id="map-image" src="images/mapLGN3.jpg" alt="Map" />
+        <img id="map-image" src="images/mapLGN4.jpg" alt="Map" />
     </div>
 
     <!-- Viewer ảnh 360 -->
@@ -164,7 +163,10 @@
                 panorama: imagePath,
                 autoLoad: true,
                 autoRotate: -2,
-                showControls: true
+                showControls: true,
+		hfov: 120,      // Góc nhìn rộng nhất (tối đa)
+        minHfov: 100,    // Giới hạn thu nhỏ
+        maxHfov: 120    // Giới hạn phóng to
             });
         }
 
